# openline-endurance-gate

./: .gitignore  CHANGELOG.md  CLAIM_BOUNDARY.md  COLLISION_SPACING_PILOT_LOG.json  EXTERNAL_ANCHOR.md  GENERATIONAL_PILOT_LOG.json  LOAD_RATE_PILOT_LOG.json  MANIFEST.json  METHODOLOGY.md  PILOT_LOG.json  PREREGISTRATION.json  README.md  RECOVERY_RELEASE_GATE.json  RUN_REPORT.json  STATE_RESTORATION_PILOT_LOG.json  TAMPER_REPORT.json  THIRD_PARTY_NOTICES.md  TIP_CAPTURE_PILOT_LOG.json  TIP_CAPTURE_V040_PILOT_LOG.json  V0100_LINEAGE.json  V040_LINEAGE.json  V050_LINEAGE.json  V060_LINEAGE.json  V070_LINEAGE.json  V080_LINEAGE.json  V090_LINEAGE.json  V091_LINEAGE.json  experiment.json  pyproject.toml
docs/: RECOVERY_CLAIMS.md  RECOVERY_METHODOLOGY.md  RECOVERY_PREREGISTRATION.md  RECOVERY_THREAT_MODEL.md  SUCCESSION_CALIBRATION.md
examples/: run_experiment.py
experiments/: baseline_v0.1.0.json  powered_sequence_v0.2.0.json
receipts/: experiment.anchor.json  experiment.jsonl  release.anchor.json  release.jsonl  succession-candidate-report.json
results/: amplitude_cycles.csv  amplitude_runs.csv  calibration.json  collision_spacing_design_witness.json  collision_spacing_events.csv  collision_spacing_runs.csv  collision_spacing_summary.md  cycle_roots.json  cycles.csv  damage_diagnostics.json  damage_fit.json  design_witness.json  fractography_runs.csv  fractography_summary.json  generational_runs.csv  generational_summary.json  generational_summary.md  heldout_witness.json  load_rate_runs.csv  mode_schedule_summary.csv  mode_summary.csv  model_comparison.json  public_witness.json  recovery_design_witness.json  recovery_handoffs.jsonl  recovery_hostile_controls.json  recovery_runs.csv  recovery_summary.json  recovery_summary.md  runs.csv  schedule_summary.csv  state_restoration_runs.csv  succession_synthetic_selftest.json  summary.json  summary.md  tip_capture_design_witness.json  tip_capture_probes.csv  tip_capture_runs.csv  (+2 more)
(+151 files in other folders)
